--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="description" content="Laura Ciamparella's portfolio - official web site">
+    <meta name="keywords" content="portfolio, graphic design, uxui, graphic designer, web develop, portfolio graphic design">
     <title>Portfolio Laura Ciamparella</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
