--- a/PAGES/Shop.html
+++ b/PAGES/Shop.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+    <meta name="description" content="Laura Ciamparella's portfolio - official web site">
+    <meta name="keywords" content="portfolio, graphic design, uxui, graphic designer, web develop, portfolio graphic design">
     <title>Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
